--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-completed.testcases.exchange=completed_test_cases_exchange
+completed.testcases.exchange=exchange
 completed.testcases.queueName=completed_test_cases_queue
 completed.testcases.routingKey=completed_test_cases_routingKey
 
